# amazon-sales-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: best_model.yaml  config.yaml  registry.yaml
models/: .gitkeep
notebooks/: 01_eda.ipynb  02_model_baselines.ipynb
scripts/: export_model.py  register_best_models.py  run_api.py  run_mlflow_ui.py  run_train.py  run_ui.py  select_best_regression_run.py
src/amazon_sales_ml/: config.py
src/amazon_sales_ml/api/: app.py
src/amazon_sales_ml/mlflow_utils/: tracking.py
src/amazon_sales_ml/models/: evaluate.py  pipelines.py  train.py
src/amazon_sales_ml/ui/: __init__.py  api_client.py  app.py
src/amazon_sales_ml/ui/components/: __init__.py
src/amazon_sales_ml/ui/views/: __init__.py  regression.py
tests/: conftest.py  test_api.py  test_model.py
